feat: redesign mode 3 villager trade editor